# libuc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  Makefile  README.MD  README.md  libuc.pc.in
cmake/: options.cmake  utils.cmake
cmake/toolchains/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
include/: uc.h  uconvert.h
include/uc/: config.h.in  types.h  uc.h
src/: dclspc.h  uc.c  uconvert.c  uconvert_internal.h
test/: UC_CreateUtf8.c  UC_CreateUtf8FromChar.c  UC_DeleteUtf8.c  UC_GetLinkedVersion.c  UC_GetLinkedVersionString.c  UC_StringUcs2Len.c  UC_StringUcs2PredictUtf8Size.c  UC_StringUcs2Size.c  UC_StringUcs2ToUtf8.c  UC_StringUcs4Len.c  UC_StringUcs4PredictUtf8Size.c  UC_StringUcs4Size.c  UC_StringUcs4ToUtf8.c  UC_StringUtf8Codepoints.c  UC_StringUtf8NextCodepoint.c  UC_StringUtf8NextCodepointOffset.c  UC_StringUtf8PreviousCodepoint.c  UC_StringUtf8PreviousCodepointOffset.c  UC_StringUtf8Size.c  UC_StringUtf8ToUcs2.c  UC_StringUtf8ToUcs4.c  UC_Ucs2ToUtf8.c  UC_Ucs4LowerByte.c  UC_Ucs4ToUtf8.c  UC_Ucs4UpperBytes.c  UC_Utf8Copy.c  UC_Utf8Size.c  UC_Utf8ToUcs2.c  UC_Utf8ToUcs4.c  test.c
